src/test/resources/org/korren/test/jlox/samples/errors/subclass_not_a_class.lox
var NotAClass = "I am totally not a class";

class Subclass < NotAClass {} // Error: "Superclass must be a class."
